[package]
name = "laithean"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Scottish Gaelic date localization library"
readme = "README.md"
homepage = "https://github.com/PokeyOne/laithean"
repository = "https://github.com/PokeyOne/laithean"
keywords = ["date", "localization", "time", "gaelic", "Gaidhlig"]
categories = ["date-and-time", "localization", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
